# disco

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml
client/: main.js  package-lock.json  package.json  preload.js  tsconfig.json
client/public/: index.html
client/src/: index.tsx
client/src/css/: style.css
client/src/scss/: _container.scss  style.scss
client/src/ts/: App.tsx  electron.d.ts
disco-lib/: Cargo.toml
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/css/: style.css
src/scss/: _container.scss  style.scss
src/ts/: App.tsx
src/ts/stores/: CountStore.ts
