[package]
name = "disco"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "disco_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = ["codegen"] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories-next = "2.0.0"
anyhow = "1.0.93"
lazy_static = "1.5.0"
thiserror = "2.0.3"
simple_logger = "5.0.0"
log = "0.4.22"
tauri-specta = { version = "2.0.0-rc.20", features = ["derive", "typescript"] }
specta = "2.0.0-rc.20"
specta-typescript = "0.0.7"
sea-orm = { version = "1.1.2", features = ["macros", "sqlx-sqlite", "runtime-tokio-rustls"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = { version = "0.14.1" }
